--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "koa",
+  "name": "koa-2-browser",
   "version": "2.0.0-alpha.7",
   "description": "Koa web app framework",
   "main": "lib/application.js",
   "scripts": {
     "test": "make test"
   },
-  "repository": "koajs/koa",
+  "repository": "johnhenry/koa-2-browser",
   "keywords": [
     "web",
     "app",
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "accepts": "^1.2.2",
+    "bufferutil": "^1.2.1",
     "content-disposition": "~0.5.0",
     "content-type": "^1.0.0",
     "cookies": "~0.6.1",
@@ -31,6 +32,7 @@
     "fresh": "^0.3.0",
     "http-assert": "^1.1.0",
     "http-errors": "^1.2.8",
+    "http-status-codes": "^1.0.6",
     "is-generator-function": "^1.0.3",
     "koa-compose": "^3.0.0",
     "koa-convert": "^1.2.0",
@@ -38,10 +40,14 @@
     "mime-types": "^2.0.7",
     "on-finished": "^2.1.0",
     "only": "0.0.2",
+    "parse-form": "^2.0.3",
     "parseurl": "^1.3.0",
-    "statuses": "^1.2.0",
+    "statuses": "^1.3.0",
     "type-is": "^1.5.5",
-    "vary": "^1.0.0"
+    "utf-8-validate": "^1.2.1",
+    "vary": "^1.0.0",
+    "ws": "^1.1.1",
+    "http":"git://github.com/johnhenry/http.git#master"
   },
   "publishConfig": {
     "tag": "next"
